--- a/UKTrains.WP7/MainPage.xaml
+++ b/UKTrains.WP7/MainPage.xaml
@@ -19,7 +19,7 @@
     <Grid x:Name="LayoutRoot" Background="Transparent">
 
         <Grid.Resources>
-            <DataTemplate x:Key="stationTemplate">
+            <DataTemplate x:Key="stationTemplateWithDistance">
                 <Button Click="OnStationButtonClick"
                         Padding="0"
                         Margin="0"
@@ -42,14 +42,70 @@
                                        VerticalAlignment="Bottom"
                                        Foreground="Gray" />
                         </StackPanel>
-                    </Grid>                    
+                    </Grid>
+                </Button>
+            </DataTemplate>
+            <DataTemplate x:Key="stationTemplate">
+                <Button Click="OnStationButtonClick"
+                        Padding="0"
+                        Margin="0"
+                        BorderThickness="0">
+                    <StackPanel Margin="0,0,0,4"
+                                Orientation="Horizontal"
+                                Grid.Column="1">
+                        <TextBlock Text="{Binding Name}"
+                                    FontSize="34" />
+                        <TextBlock Text="{Binding Code}" 
+                                    Margin="12,0,0,0"
+                                    VerticalAlignment="Bottom"
+                                    Foreground="Gray" />
+                    </StackPanel>
                 </Button>
             </DataTemplate>
         </Grid.Resources>
 
         <controls:Pivot Title="Stations" x:Name="pivot">
+            <controls:PivotItem Header="Recent">
+                <ItemsControl x:Name="recentStations" 
+                                ItemTemplate="{StaticResource stationTemplate}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <VirtualizingStackPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.Template>
+                        <ControlTemplate TargetType="ItemsControl">
+                            <ScrollViewer>
+                                <ItemsPresenter/>
+                            </ScrollViewer>
+                        </ControlTemplate>
+                    </ItemsControl.Template>
+                </ItemsControl>
+            </controls:PivotItem>
             <controls:PivotItem Header="Nearest">
-                <ItemsControl x:Name="nearestStations" 
+                <Grid>
+                    <ItemsControl x:Name="nearestStations" 
+                                  ItemTemplate="{StaticResource stationTemplateWithDistance}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.Template>
+                            <ControlTemplate TargetType="ItemsControl">
+                                <ScrollViewer>
+                                    <ItemsPresenter/>
+                                </ScrollViewer>
+                            </ControlTemplate>
+                        </ItemsControl.Template>
+                    </ItemsControl>
+                    <TextBlock x:Name="nearestStationsMessageTextBlock" 
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center" />
+                </Grid>
+            </controls:PivotItem>
+            <controls:PivotItem Header="All">
+                <ItemsControl x:Name="allStations" 
                                 ItemTemplate="{StaticResource stationTemplate}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -67,9 +123,6 @@
             </controls:PivotItem>
         </controls:Pivot>
 
-        <TextBlock x:Name="messageTextBlock" 
-                   VerticalAlignment="Center"
-                   HorizontalAlignment="Center" />
     </Grid>   
 
     <phone:PhoneApplicationPage.ApplicationBar>
