--- a/UKTrains.WP7/MainAndFilterPage.xaml
+++ b/UKTrains.WP7/MainAndFilterPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="UKTrains.MainPage"
+    x:Class="UKTrains.MainAndFilterPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -20,7 +20,7 @@
 
         <Grid.Resources>
             <DataTemplate x:Key="stationTemplateWithDistance">
-                <Button Click="OnStationButtonClick"
+                <Button Click="OnStationClick"
                         Padding="0"
                         Margin="0"
                         BorderThickness="0">
@@ -46,7 +46,7 @@
                 </Button>
             </DataTemplate>
             <DataTemplate x:Key="stationTemplate">
-                <Button Click="OnStationButtonClick"
+                <Button Click="OnStationClick"
                         Padding="0"
                         Margin="0"
                         BorderThickness="0">
@@ -64,7 +64,7 @@
             </DataTemplate>
         </Grid.Resources>
 
-        <controls:Pivot Title="Rail Stations" x:Name="pivot">
+        <controls:Pivot x:Name="pivot">
             <controls:PivotItem Header="Recent">
                 <ItemsControl x:Name="recentStations" 
                                 ItemTemplate="{StaticResource stationTemplate}">
@@ -82,7 +82,7 @@
                     </ItemsControl.Template>
                 </ItemsControl>
             </controls:PivotItem>
-            <controls:PivotItem Header="Nearest">
+            <controls:PivotItem x:Name="nearest">
                 <Grid>
                     <ItemsControl x:Name="nearestStations" 
                                   ItemTemplate="{StaticResource stationTemplateWithDistance}">
@@ -127,10 +127,10 @@
 
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshButtonClick"/>
+            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick"/>
             <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.settings.png" Text="Settings" Click="OnSettingsButtonClick"/>
-                <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.star.png" Text="Rate and Review" Click="OnRateAndReviewButtonClick"/>
+                <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.settings.png" Text="Settings" Click="OnSettingsClick"/>
+                <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.star.png" Text="Rate and Review" Click="OnRateAndReviewClick"/>
             </shell:ApplicationBar.MenuItems>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
