--- a/UKTrains.WP7/SettingsPage.xaml
+++ b/UKTrains.WP7/SettingsPage.xaml
@@ -36,7 +36,7 @@
  
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.check.png" Text="Save" Click="OnSaveButtonClick"/>
+            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.check.png" Text="Save" Click="OnSaveClick"/>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
