--- a/UKTrains.WP7/MainAndFilterPage.xaml
+++ b/UKTrains.WP7/MainAndFilterPage.xaml
@@ -131,6 +131,7 @@
             <shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.settings.png" Text="Settings" Click="OnSettingsClick"/>
                 <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.star.png" Text="Rate and Review" Click="OnRateAndReviewClick"/>
+                <shell:ApplicationBarMenuItem Text="Clear recent items" Click="OnClearRecentItemsClick"/>
             </shell:ApplicationBar.MenuItems>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
