--- a/LearnOnTheGo.WP7/MainPage.xaml
+++ b/LearnOnTheGo.WP7/MainPage.xaml
@@ -20,7 +20,7 @@
 
         <Grid.Resources>
             <DataTemplate x:Key="courseTemplate">
-                <Button Click="OnCourseButtonClick"
+                <Button Tap="OnCourseClick"
                         BorderThickness="0">
                     <StackPanel>
                         <TextBlock TextWrapping="Wrap"
@@ -97,10 +97,10 @@
  
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar Mode="Minimized">
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshButtonClick"/>
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.settings.png" Text="Settings" Click="OnSettingsButtonClick"/>
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.star.png" Text="Rate and Review" Click="OnRateAndReviewButtonClick"/>
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.reply.email.png" Text="Give Feedback" Click="OnGiveFeedbackButtonClick"/>
+            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick"/>
+            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.settings.png" Text="Settings" Click="OnSettingsClick"/>
+            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.star.png" Text="Rate and Review" Click="OnRateAndReviewClick"/>
+            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.reply.email.png" Text="Give Feedback" Click="OnGiveFeedbackClick"/>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
