--- a/UKTrains.WP7/MainAndFilterPage.xaml
+++ b/UKTrains.WP7/MainAndFilterPage.xaml
@@ -129,9 +129,10 @@
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
             <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick"/>
             <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.settings.png" Text="Settings" Click="OnSettingsClick"/>
-                <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.star.png" Text="Rate and Review" Click="OnRateAndReviewClick"/>
                 <shell:ApplicationBarMenuItem Text="Clear recent items" Click="OnClearRecentItemsClick"/>
+                <shell:ApplicationBarMenuItem Text="Settings" Click="OnSettingsClick"/>
+                <shell:ApplicationBarMenuItem Text="Rate and Review" Click="OnRateAndReviewClick"/>
+                <shell:ApplicationBarMenuItem Text="Give Feedback" Click="OnGiveFeedbackClick"/>
             </shell:ApplicationBar.MenuItems>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
