--- a/UKTrains.WP7/StationPage.xaml
+++ b/UKTrains.WP7/StationPage.xaml
@@ -110,8 +110,9 @@
             <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick" />
             <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.filter.png" Text="Filter" Click="OnFilterClick" />
             <shell:ApplicationBar.MenuItems>
-                <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.settings.png" Text="Settings" Click="OnSettingsClick"/>
-                <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.star.png" Text="Rate and Review" Click="OnRateAndReviewClick"/>
+                <shell:ApplicationBarMenuItem Text="Settings" Click="OnSettingsClick"/>
+                <shell:ApplicationBarMenuItem Text="Rate and Review" Click="OnRateAndReviewClick"/>
+                <shell:ApplicationBarMenuItem Text="Give Feedback" Click="OnGiveFeedbackClick"/>
                 <shell:ApplicationBarMenuItem Text="Clear filter" Click="OnClearFilterClick"/>
             </shell:ApplicationBar.MenuItems>
         </shell:ApplicationBar>
