--- a/UKTrains.WP7/SettingsPage.xaml
+++ b/UKTrains.WP7/SettingsPage.xaml
@@ -28,7 +28,12 @@
                         your current location to improve your experience. No 
                         information is stored or shared. You may disable 
                         Location Services.
-                    </TextBlock>                               
+                    </TextBlock>
+                    <toolkit:ToggleSwitch Content="Use imperial system"
+                                          x:Name="useMilesInsteadOfKms" />
+                    <TextBlock TextWrapping="Wrap" Margin="12,0">
+                        Otherwise metric system will be used.
+                    </TextBlock>
                 </StackPanel>
             </controls:PivotItem>
         </controls:Pivot>       
