--- a/UKTrains.WP7/MainAndFilterPage.xaml
+++ b/UKTrains.WP7/MainAndFilterPage.xaml
@@ -87,6 +87,11 @@
             </DataTemplate>
         </Grid.Resources>
 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        
         <controls:Pivot x:Name="pivot">
             <controls:PivotItem x:Name="nearest" Header="Near Me">
                 <Grid>
@@ -155,6 +160,8 @@
             </controls:PivotItem>
         </controls:Pivot>
 
+        <Grid x:Name="adGrid" Grid.Row="1" />
+        
     </Grid>   
 
     <phone:PhoneApplicationPage.ApplicationBar>
