Remove adrotator control and keep only InnerActive

--- a/UKTrains.WP7/MainAndFilterPage.xaml
+++ b/UKTrains.WP7/MainAndFilterPage.xaml
@@ -127,7 +127,8 @@
                         </ItemsControl.Template>
                     </ItemsControl>
                     <TextBlock x:Name="nearestStationsMessageTextBlock" 
-                               VerticalAlignment="Center"
+                               TextWrapping="Wrap"
+                               Margin="0,220,0,0"
                                HorizontalAlignment="Center" />
                 </Grid>
             </controls:PivotItem>
